-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 261002) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO);
		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in preparation
		       of major releases (optional)

-----------------------------------------------------------------------

??102002 (v2.2.0-pre4)
	- edi-entries: edi-30
	- added: eiam - commands 'map-cop-list', 'map-ctrl-list', 
		 'map-ladspa-list' and 'map-preset-list'; see 
		 ecasound-iam(1) man page for details
	- added: eiam - 'ao-add-default' command
	- added: ecicpp_tester, a unit test program for C++ ECI
	- changed: libecasoundc now LGPL licensed
	- changed: edi-30; ecaplay rewritten using the new standalone
	 	   ECI api
	- changed: reimplemented the C++ ECI interface on top of 
		   the new standalone C ECI interface
	- changed: implementation level improvements to db, ewf, 
		   resample, reverse and typeselect audio object 
		   types
	- fixed: libecasoundc return value sync problem; return
		 value for command wasn't returned until command n+1 
		 was issued
	- fixed: -etc, -etl and -etp crashes if delay parameter 
		 was set to zero
19102002 (v2.2.0-pre3)
	- fixed: reverted to using old ALSA 0.9 hw-params API,
		 ecasound agains works with old 0.9beta and 0.9rc 
		 ALSA versions
18102002 (v2.2.0-pre2)
	- fixed: ALSA objects weren't properly registered as audio
		 object types
	- fixed: debug level was resetted to 0 after issuing
		 'int-output-mode-wellformed'
	- fixed: automake complained about multiple definition
	 	 of ecasoundc_sa